add line breaks

--- a/.vscode-extensions.md
+++ b/.vscode-extensions.md
@@ -1,25 +1,26 @@
-html-snippets
-vscode-toggle-quotes
-kohler.npm-intellisense
-kohler.path-intellisense
-bracket-pair-colorizer
-vscode-markdownlint
-vscode-eslint
-es7-react-js-snippets
-vscode-npm-script
-prettier-vscode
-auto-rename-tag
-svelte-vscode
-theme-levelup
-vetur
-material-icon-theme
-live-sass
-LiveServer
-sass-indented
-night-owl
-vue-vscode-extensionpack
-vue-vscode-snippets
-markdown-preview-enhanced
-vscode-import-cost
-JavaScriptSnippets
-markdown-all-in-one
+html-snippets  
+vscode-toggle-quotes  
+npm-intellisense  
+path-intellisense  
+bracket-pair-colorizer  
+vscode-markdownlint  
+vscode-eslint  
+es7-react-js-snippets  
+vscode-npm-script  
+prettier-vscode  
+auto-rename-tag  
+svelte-vscode  
+theme-levelup  
+vetur  
+material-icon-theme  
+live-sass  
+LiveServer  
+sass-indented  
+night-owl  
+vue-vscode-extensionpack  
+vue-vscode-snippets  
+markdown-preview-enhanced  
+vscode-import-cost  
+JavaScriptSnippets  
+markdown-all-in-one  
+  
