update list of installed extensions

--- a/.vscode-extensions.md
+++ b/.vscode-extensions.md
@@ -3,13 +3,17 @@ vscode-toggle-quotes
 npm-intellisense  
 path-intellisense  
 bracket-pair-colorizer  
+vue-peek  
 vscode-markdownlint  
 vscode-eslint  
 es7-react-js-snippets  
 vscode-npm-script  
 prettier-vscode  
 auto-rename-tag  
+gc-excelviewer  
 svelte-vscode  
+vscode-styled-components  
+vscode-random  
 theme-levelup  
 vetur  
 material-icon-theme  
