add cypress snippets to extensions

--- a/.vscode-extensions.md
+++ b/.vscode-extensions.md
@@ -1,4 +1,5 @@
 html-snippets  
+cypress-snippets  
 vscode-toggle-quotes  
 npm-intellisense  
 path-intellisense  
@@ -27,4 +28,3 @@ markdown-preview-enhanced
 vscode-import-cost  
 JavaScriptSnippets  
 markdown-all-in-one  
-  
