--- a/.vscode-extensions.md
+++ b/.vscode-extensions.md
@@ -20,10 +20,10 @@ vetur
 material-icon-theme  
 live-sass  
 LiveServer  
+synthwave-vscode  
 sass-indented  
 night-owl  
 vue-vscode-extensionpack  
-vue-vscode-snippets  
 markdown-preview-enhanced  
 vscode-import-cost  
 JavaScriptSnippets  
