--- a/.vscode-extensions.md
+++ b/.vscode-extensions.md
@@ -1,30 +1,22 @@
-html-snippets  
-cypress-snippets  
-vscode-toggle-quotes  
-npm-intellisense  
-path-intellisense  
-bracket-pair-colorizer  
-vue-peek  
-vscode-markdownlint  
-vscode-eslint  
-es7-react-js-snippets  
-vscode-npm-script  
-prettier-vscode  
-auto-rename-tag  
-gc-excelviewer  
-svelte-vscode  
-vscode-styled-components  
-vscode-random  
-theme-levelup  
-vetur  
-material-icon-theme  
-live-sass  
-LiveServer  
-synthwave-vscode  
-sass-indented  
-night-owl  
-vue-vscode-extensionpack  
-markdown-preview-enhanced  
-vscode-import-cost  
-JavaScriptSnippets  
-markdown-all-in-one  
+turbo-console-log
+bracket-pair-colorizer
+vscode-svgviewer
+vscode-eslint
+es7-react-js-snippets
+gitlens
+2077-theme
+prettier-vscode
+auto-rename-tag
+Go
+material-icon-theme
+polacode
+typescript-hero
+live-sass
+LiveServer
+synthwave-vscode
+night-owl
+markdown-preview-enhanced
+code-spell-checker
+vscode-import-cost
+JavaScriptSnippets
+markdown-all-in-one
