--- a/.vscode-extensions.md
+++ b/.vscode-extensions.md
@@ -1,22 +1,15 @@
-turbo-console-log
-bracket-pair-colorizer
-vscode-svgviewer
-vscode-eslint
-es7-react-js-snippets
-gitlens
-2077-theme
-prettier-vscode
-auto-rename-tag
-Go
-material-icon-theme
-polacode
-typescript-hero
-live-sass
-LiveServer
-synthwave-vscode
-night-owl
-markdown-preview-enhanced
-code-spell-checker
-vscode-import-cost
-JavaScriptSnippets
-markdown-all-in-one
+* bracket-pair-colorizer
+* vscode-eslint
+* gitlens
+* 2077-theme
+* prettier-vscode
+* auto-rename-tag
+* material-icon-theme
+* polacode
+* live-sass
+* LiveServer
+* markdown-preview-enhanced
+* code-spell-checker
+* vscode-import-cost
+* JavaScriptSnippets
+* markdown-all-in-one
