--- a/README.adoc
+++ b/README.adoc
@@ -9,6 +9,8 @@ different dot-files for editor, command line, dev setup etc...
 ** zsh-nvm
 ** zsh-syntax-highlighting
 ** zsh-autosuggestions
+** z
+** https://gist.github.com/DukeNgn/9312a65e1535b3b1bffd9fed2c892079[powerline fonts]
 * VSCode
 * nvm
 * raycast
